--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="https://img.icons8.com/fluency/48/partly-cloudy-day.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Trippy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
